# ICRA2017

./: .gitignore  README.md  demo.py  requirements.txt  utils.py  visualize.py
ceresCode/: CMakeLists.txt  costFunctions.hpp  problemStructs.hpp  singleViewPoseAdjuster.cc  singleViewShapeAdjuster.cc
data/: basisVectors.txt  intrinsics.txt  keypointLookupAzimuth.txt  meanShape.txt  shapeCoefficientsInitial.txt
data/examples/01/: bbox.txt  keypoints.txt  metadata.yml
data/examples/02/: bbox.txt  keypoints.txt  metadata.yml
unittests/: test_utils.py
